# softloq-build

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pytest-ci.yml  python-app.yml
softloq_build/: __main__.py  app_info.py  cli.py
softloq_build/command_line/: __init__.py  cli.py  help_option.py  load_option.py  version_option.py
softloq_build/command_line/shell_mode/: shell.py
tests/: test_example.py
tests/command_line/: test_command_line.py  test_help_option.py  test_load_option.py  test_version_option.py
tests/command_line/shell_mode/: test_shell.py
